# nekocat

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/nekocat/: __init__.py  __main__.py  _version.py
src/nekocat/backends/: __init__.py  base.py  claude.py  mock.py  ollama.py  openai.py  registry.py
src/nekocat/cli/: __init__.py  app.py  chat_loop.py  renderer.py
src/nekocat/config/: __init__.py  loader.py  settings.py
src/nekocat/core/: __init__.py  chat.py  history.py  session.py
src/nekocat/persona/: __init__.py  models.py  prompts.py
src/nekocat/persona/presets/: __init__.py  _registry.py  classic_neko.yaml  kuudere_neko.yaml  tsundere_neko.yaml
tests/: conftest.py
tests/test_backends/: test_mock.py  test_registry.py
tests/test_cli/: test_app.py
tests/test_config/: test_settings.py
tests/test_core/: test_chat.py  test_history.py
tests/test_persona/: test_models.py  test_prompts.py  test_registry.py
